# sell_bot

./: .env  .gitignore  Makefile  README.md  alembic.ini  backup.sql  bot.py  config.ini  create_db_if_not_exists.py  pyproject.toml  requirements.txt  storage.db  test.py
accessor/: Makefile
accessor/deployments/database/: init.sql
accessor/deployments/grafana/: grafana.db
bot/: __init__.py  __main__.py  fsm_states_groups.py
bot/keyboards/: reply.py
bot/middlewares/: __init__.py
bot/views/: add_data.py  other.py  question_1.py  question_2.py  question_3.py  question_4.py  question_5.py  question_6.py  question_7.py  report_excel.py  start.py
bot_/: __init__.py  __main__.py
bot_/keyboards/: inline.py
bot_/middlewares/: database_session.py
bot_/views/: add_data.py  other.py  question_1.py  question_2.py  question_3.py  question_4.py  question_5.py  question_6.py  question_7.py  report_excel.py  start.py
cases/: __init__.py  cases.py
cases/db/: db.py
cases/db/grpc_py_database_accessing/: .gitignore  (+3 more)
cases/utils/: __init__.py  msg.py  params.py  state.py
db/: __init__.py  core.py  sa_loading.py  sa_models.py  utils.py
db/models/: __init__.py  base.py  lastmonth.py  message.py  next.py  setting.py  user.py
db/repositories/: __init__.py  base.py
deploy/: docker-compose.yaml
docs/: last_month.xlsx  next_month.xlsx
logger/: README.md
migrations/: env.py
migrations/versions/: c95ff74a9636_add_a_column.py
resources/: messages.py
utils/: analytics.py  callback_data.py  config.py  excel_report.py  inspect.py  redis.py  services.py
(+11 files in other folders)
