[tool.poetry]
name = "crypto_investments_bot"
version = "1.0.0"
description = ""
authors = ["igor <ashmanx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.0"
SQLAlchemy = "1.4.36"
aiogram = "3.0.0b3"
jproperties = "^2.1.1"
aiomysql = "^0.1.0"
PyMySQL = "^1.0.2"
SQLAlchemy-Utils = "^0.38.2"
sanic = "^22.3.1"
mypy = "^0.950"
redis = {extras = ["asyncio"], version = "^4.2.2"}
XlsxWriter = "^3.0.3"
pandas = "^1.5.3"
openpyxl = "^3.0.10"
mysql-connector = "^2.2.9"
alembic = "1.7.7"
pycountry = "^22.3.5"
langcodes = "^3.3.0"
language-data = "^1.1"
prettytable = "^3.6.0"
aspose-cells = "^23.2.0"
fpdf = "^1.7.2"
pypdf2 = "^3.0.1"
aioinflux = "^0.9.0"

[tool.poetry.dev-dependencies]
sqlalchemy-stubs = "^0.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
#requires = ["setuptools>=61.0"]
#build-backend = "setuptools.build_meta"
